<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="@dimen/default_card_margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_LBL_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_setup_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_TIL_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/profile_setup_username_hint"
        android:layout_marginTop="@dimen/default_card_margin"
        app:layout_constraintTop_toBottomOf="@id/profile_LBL_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_EDT_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_LBL_games"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_setup_pick_games"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/default_card_margin"
        app:layout_constraintTop_toBottomOf="@id/profile_TIL_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_RV_games"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_marginTop="@dimen/default_card_margin"
        android:layout_marginBottom="@dimen/default_card_margin"
        app:layout_constraintTop_toBottomOf="@id/profile_LBL_games"
        app:layout_constraintBottom_toTopOf="@id/profile_BTN_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>