<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:padding="@dimen/space_18">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/squad_lbl_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/squad_title"
        android:textColor="@color/text_primary"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/squad_tabs"
        android:layout_width="0dp"
        android:layout_height="@dimen/tabs_height"
        android:layout_marginTop="@dimen/space_14"
        android:background="@color/card_dark"
        android:padding="@dimen/space_4"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/squad_lbl_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/squad_btn_friends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/squad_tab_friends"
            android:textAllCaps="false"
            android:textColor="@color/text_primary"
            app:backgroundTint="@color/nav_selected"
            app:cornerRadius="@dimen/tab_corner_radius"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/space_6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/squad_btn_requests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/squad_tab_requests"
                android:textAllCaps="false"
                android:textColor="@color/text_primary"
                app:backgroundTint="@color/card_inner"
                app:cornerRadius="@dimen/tab_corner_radius"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/squad_badge_requests"
                android:layout_width="@dimen/badge_size"
                android:layout_height="@dimen/badge_size"
                android:layout_gravity="end|top"
                android:layout_marginEnd="@dimen/space_6"
                android:layout_marginTop="@dimen/space_6"
                android:gravity="center"
                android:text="2"
                android:textSize="@dimen/text_11"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                android:background="@drawable/bg_badge_red"
                android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/squad_lbl_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/squad_empty_friends"
        android:textColor="@color/text_muted"
        android:textSize="@dimen/text_14"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/space_24"
        app:layout_constraintTop_toBottomOf="@id/squad_tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/squad_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_14"
        app:layout_constraintTop_toBottomOf="@id/squad_tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>